# pewpew

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  TODO.md
src/: aabb.cc  aabb.h  app.cc  app.h  app_settings.h  bvh.cc  bvh.h  camera.cc  camera.h  color.h  dielectric.cc  dielectric.h  float.h  hittable.h  hittable_list.cc  hittable_list.h  lambertian.cc  lambertian.h  main.cc  material.h  metal.cc  metal.h  ray.h  sphere.cc  sphere.h  utils.h  vec3.h
